Update JVM arguments to include additional module access for Quarkus
Update ISSUES.md

fix ci/cd

Update release.sh