@@ -1,3 +1,8 @@
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+--add-opens java.base/java.nio=ALL-UNNAMED
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
 --enable-native-access=ALL-UNNAMED
 -XX:+EnableDynamicAgentLoading
 -Xshare:off
